Fix image centering in posts using .aligncenter

--- a/style.css
+++ b/style.css
@@ -132,6 +132,7 @@ h3 #searchresults {color:#FF000A;}
 
 /* IMAGES */
 img.centered {display: block;margin-left: auto;margin-right: auto;}
+img.aligncenter {display: block;margin-left: auto;margin-right: auto;}
 img.alignright {padding: 4px;margin: 0 0 2px 7px;display: inline;}
 img.alignleft {padding: 4px;margin: 0 7px 2px 0;display: inline;}
 .alignright {float: right;}
